--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,10 @@ footer {
 .button.primary {
   background-color: #f0c040;
 }
+.filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
